# isopod

./: .gitignore  README.md
backend/: Cargo.toml  map.html  map.js  map_location.py
backend/src/: main.rs
bean_sim/: Cargo.toml
bean_sim/src/: main.rs
isopod/: Cargo.toml  README.md  bootstrap.css  build_and_remote_run.sh  config.toml  cross_compile.sh  cross_on_chonker.sh  index.html  rotation_matrix.py  settings.toml  systemd_example.service
isopod/.cargo/: config
isopod/src/: circular_buffer.rs  common_structs.rs  control_server.rs  gps.rs  i2c.rs  led.rs  main.rs  motion_sensor.rs  pattern_manager.rs  reporter.rs  temperature.rs  ws_server.rs
isopod/src/patterns/: blue_swirl.rs  colourfield.rs  colourwipes.rs  geometry.rs  glitch.rs  id_spines.rs  mod.rs  rainbow_swirl.rs  rave.rs  searchlight.rs  shock.rs  sleep.rs  sparkles.rs  starfield.rs  strip_test.rs  test_blackout.rs  wormholes.rs  zoom.rs
isopod/src/patterns/beans/: bean_sim.rs  mod.rs  test_bean_sim.rs
isopod_distro/: BOM.csv  MAX17205.kicad_sym  UPU-MAX-M8C.kicad_sym  adafruit_tdk_icm-20948.kicad_sym  fp-lib-table  isopod_distro.kicad_pcb  isopod_distro.kicad_prl  isopod_distro.kicad_pro  isopod_distro.kicad_sch  isopod_distro.step  sym-lib-table
isopod_distro/adafruit-tdk-icm-20948.pretty/: adafruit-tdk-icm-20948.kicad_mod
isopod_distro/jlcpcb/: project.db
isopod_distro/jlcpcb/gerber/: isopod_distro-CuBottom.gbr  isopod_distro-CuIn1.gbr  isopod_distro-CuIn2.gbr  isopod_distro-CuTop.gbr  isopod_distro-EdgeCuts.gbr  isopod_distro-MaskBottom.gbr  isopod_distro-MaskTop.gbr  isopod_distro-NPTH.drl  isopod_distro-PTH.drl  isopod_distro-PasteBottom.gbr  isopod_distro-PasteTop.gbr  isopod_distro-SilkBottom.gbr  isopod_distro-SilkTop.gbr
isopod_distro/upu-max-m8c.pretty/: upu-max-m8c.kicad_mod
sim/: sim.html  sim.js
sim/sim_backend/: Cargo.toml
sim/sim_backend/src/: main.rs
