[package]
name = "isopod_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.3.2", default_features = false, features = ["tls"] }
tokio = { version = "1", features=["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bytes = "1.1.0"
