[package]
name = "isopod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.13.1", features=["hal"] }
anyhow = "1.0.55"
icm20948 = "0.0.1"
linux-embedded-hal = "0.3.2"
nmea = "0.0.11"
rs_ws281x = { git = "https://github.com/rpi-ws281x/rpi-ws281x-rust.git" }
ctrlc = "3.2.1"
color_space = "0.5.3"
chrono = "0.4"
ureq = { version = "2.4.0", features = ["json"]}
warp = { version = "0.3.2", default_features = false, features = ["tls", "websocket"] }
tokio = { version = "1", features=["full"] }
serde_json = "1.0.79"
futures-util = "0.3.21"
bytes = "1.1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
