[package]
name = "isopod"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "isopod"
path = "src/main.rs"

[[bin]]
name = "test_bean_sim"
path = "src/patterns/beans/test_bean_sim.rs"

[dependencies]
rppal = { version = "0.13.1", features=["hal"], optional = true }
icm20948 = { version = "0.0.1", optional = true }
linux-embedded-hal = { version = "0.3.2", optional = true }
nmea = { version = "0.0.11", optional = true }
rs_ws281x = { git = "https://github.com/rpi-ws281x/rpi-ws281x-rust.git", optional = true }
max1720x = { version = "0.1.0", optional = true }

anyhow = "1.0.55"
ctrlc = { version = "3.2.1", features = ["termination"]}
color_space = "0.5.3"
chrono = "0.4"
ureq = { version = "2.4.0", features = ["json"]}
warp = { version = "0.3.2", default_features = false, features = ["tls", "websocket"] }
tokio = { version = "1", features=["full"] }
serde_json = "1.0.79"
futures-util = "0.3.21"
bytes = "1.1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13.1", default_features = false, features = ["toml"] }
lazy_static = "1.4.0"
rand = "0.8.5"
static_assertions = "1.1.0"

[features]
default = ["hardware"]
hardware = ["dep:rppal", "dep:icm20948", "dep:linux-embedded-hal", "dep:nmea",
            "dep:rs_ws281x", "dep:max1720x"]

[profile.dev]
lto = "off"
